@@ -7,6 +7,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ***	Add vppreproc --dump-defines option.
 
+****	Fix preprocessing ifdef `INDIRECT(DEFINE).
+
 * Verilog::Language 3.250 2010/06/21
 
 **	Add parsing of "defparam", including SigParser::defparam callback,
@@ -927,7 +929,7 @@ indicates the contributor was also the author of the fix; Thanks!
 * Verilog::Language 1.5 2000/5/22
 
 **	Allowed non-numerics in bus subscripts
-	[Alan.Heinold@East.Sun.COM]
+	[Alan.Heinold, SUN]
 
 ***	Fixed bug where lines with just a newline would boggle the linecount.
 
